# projectM-Apple-Music-Uber

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  install-codesign.cmake.in  packaging.cmake
src/: CMakeLists.txt  iprojectM.hpp  iprojectM.mm  iprojectM_mac.mm
src/Resources/: ProjectM-plugin-info.plist  postinstall
